--- a/host/osla-host/src/estim/CMakeLists.txt
+++ b/host/osla-host/src/estim/CMakeLists.txt
@@ -7,8 +7,9 @@ add_library(estim #create library target. This is added by ../cmakelists.txt
 )
 
 
+
 # Add test executable
-#add_executable(mmioTest mmio.test.cpp)
+add_executable(upsampleTest upsample.test.cpp)
 #target_link_libraries(mmioTest ${UHD_LIBRARIES} ${Boost_LIBRARIES})
 
-#target_link_libraries(mmioTest mmio)
+target_link_libraries(upsampleTest estim mmio)
