Write host code for digital loopback
Initial test complete. Now set tx amplitude to try different snrs

--- a/host/osla-host/CMakeLists.txt
+++ b/host/osla-host/CMakeLists.txt
@@ -55,6 +55,9 @@ link_directories(${Boost_LIBRARY_DIRS})
 ### Make the executable #######################################################
 add_executable(osla_host osla_host.cpp)
 
+# Add the preamble to the build directory
+configure_file( ${CMAKE_BINARY_DIR}/src/estim/preamble.mem preamble.mem COPYONLY)
+
 # WW - add c++ functions
 add_subdirectory(src/mmio)
 add_subdirectory(src/estim)
