Debug wireless fb loopback

--- a/host/osla-host/tests/CMakeLists.txt
+++ b/host/osla-host/tests/CMakeLists.txt
@@ -2,6 +2,8 @@
 configure_file( ${CMAKE_BINARY_DIR}/src/estim/preamble.mem preamble.mem COPYONLY)
 
 # Add executables
+
+# digital test------------------------------------------------------------
 add_executable(dlbTest dlb_test.cpp)
 target_link_libraries(dlbTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
 
@@ -10,6 +12,8 @@ target_link_libraries(dlbTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
 
 add_executable(dlbPrmblCap dlb_prmbl_cap.cpp)
 target_link_libraries(dlbPrmblCap ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
+
+#fwd test------------------------------------------------------------------------
 
 add_executable(fwdAlbPrmblCap fwd_alb_prmbl_cap.cpp)
 target_link_libraries(fwdAlbPrmblCap ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
@@ -23,4 +27,15 @@ target_link_libraries(fwdAlbDebug ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim
 add_executable(fwdAlbTest fwd_alb_test.cpp)
 target_link_libraries(fwdAlbTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
 
+# fb tests-----------------------------------------------------------------
 
+add_executable(fbAlbCap fb_alb_cap.cpp)
+target_link_libraries(fbAlbCap ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
+
+add_executable(fbAlbTest fb_alb_test.cpp)
+target_link_libraries(fbAlbTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
+
+
+# p2p tests
+add_executable(SrcDestEstim src_dest_estim.cpp)
+target_link_libraries(SrcDestEstim ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
