Implement sync lock c++ code
src_dest_lock estim and test both seem to work well. For much longer runs, I measured that timing drifts by 20 samples or so. Its unclear if this will be a problem since active packets are so short and fast.
Also tested fixed length active transmission. The next step is getting gain control for testing ber

--- a/host/osla-host/tests/CMakeLists.txt
+++ b/host/osla-host/tests/CMakeLists.txt
@@ -45,3 +45,6 @@ target_link_libraries(fbAlbTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
 
 add_executable(SrcDestLockEstim src_dest_lock_estim.cpp)
 target_link_libraries(SrcDestLockEstim ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
+
+add_executable(SrcDestLockTest src_dest_lock_test.cpp)
+target_link_libraries(SrcDestLockTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
