Final testing for ICC paper

--- a/host/osla-host/tests/CMakeLists.txt
+++ b/host/osla-host/tests/CMakeLists.txt
@@ -49,6 +49,9 @@ target_link_libraries(SrcDestLockEstim ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio 
 add_executable(SrcDestLockTest src_dest_lock_test.cpp)
 target_link_libraries(SrcDestLockTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
 
+add_executable(ThresholdBerTest threshold_ber_test.cpp)
+target_link_libraries(ThresholdBerTest ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
+
 # rss estimation
 add_executable(RssEstim rss_estim.cpp)
 target_link_libraries(RssEstim ${UHD_LIBRARIES} ${Boost_LIBRARIES} mmio estim)
