Add hyp test est
This worked well without rate adaptation. Test for rate adaptation as well as different params
Also want to try hyp test on the change in packet variance instead.

--- a/host/osla-host/CMakeLists.txt
+++ b/host/osla-host/CMakeLists.txt
@@ -64,6 +64,7 @@ add_subdirectory(src/estim)
 target_link_libraries(osla_host mmio estim)
 
 add_subdirectory(tests)
+add_subdirectory(interference)
 
 set(CMAKE_BUILD_TYPE "Release")
 message(STATUS "******************************************************************************")
